Package: R.rsp
==============

Version: 0.9.13 [2013-07-17]
o CLEANUP: Internal code cleanup.


Version: 0.9.12 [2013-07-17]
o Now it possible to pass argument 'clean' all the way down to
  compileLaTeX() via rfile(), e.g. rfile("foo.tex.rsp", clean=TRUE).


Version: 0.9.11 [2013-07-16]
o Added rstring(), rcat() and rfile() for function:s.
o ROBUSTNESS: Updated system tests to not use commas in LaTeX file
  paths, because such are not supported on all file systems.
o ROBUSTNESS: If compileLaTeX() was called on a LaTeX file in a
  directory different than the working directory, it could fail to
  located files to be included (e.g. image files).  In order to make
  this less likely to happen, compileLaTeX() now adds the the directory
  of the compiled LaTeX file to the TEXINPUTS search path, iff it is
  different than the working directory.


Version: 0.9.10 [2013-07-14]
o Added rfile() also for RspString, RspDocument and RspRSourceCode.
o BUG FIX: evaluate() for RspRSourceCode failed to evaluate in to
  proper environment if the default (parent) environment was used.


Version: 0.9.9 [2013-07-12]
o DOCUMENTATION: Updated the vignettes.
o Updated the template vignette Makefile that is needed prior
  to R v3.0.0 to no remove LaTeX files needed by R CMD check.
  These should instead be handled by .Rinstignore (a template
  for this is also available).


Version: 0.9.8 [2013-07-04]
o ROBUSTNESS: Added more tests on preprocessing.
o Internal code cleanup.
o Bumped up package dependencies.


Version: 0.9.7 [2013-05-25]
o Minor speedup by replacing rm() calls with NULL assignments.


Version: 0.9.6 [2013-05-23]
o ROBUSTNESS: Now rfile() handles files with only one filename extension.
o Several updates to browseRsp():
  - It automatically adds the current directory ('.') as well as a
    './rsp' subdirectory to the list of known root paths.
  - R.rsp::browseRsp() works without loading the package first.
  - It can be used to open any RSP file by specifying it's (absolute or